TypeChecking/test_cases/bad/undef-attr-type.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits Main {
  x : Fish <- 5 ;
} ;
